Added about text/info

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
     {{>header}} 
 </header>
 <body>
+    <p>This site was created by Naveed Wani. It uses data from Weather Stack and Mapbox!!  </p>
     <div class="main-content">
     <img class="portrait" src="/img/dp_1.jpg" alt="dp_1"> 
     </div>
